# lasergraph-script-generator

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
cmd/: root.go
cmd/programming/: programming.go
docs/scripts/: AutoScript.md  ShareFilm.md  ShareTimescript.md  share-film.md  share-timescript.md
src/: cli.rs  main.rs  template.rs
templates/: load_film.txt  load_timescript.txt  share_film.txt  share_timescript.txt  share_timescript_master.txt
