[package]
name = "lasergraph-script-generator"
version = "0.1.0"
edition = "2021"
authors = ["Dustin Strobel <d-strobel>"]
repository = "https://github.com/laser-zentrale-de/lasergraph-script-generator"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
askama = "0.12.1"
